...
                .resizable()
                .aspectRatio(contentMode: .fit)
                .frame(maxWidth: getMinSize())
            Spacer()
            MyButton(label: "Start", action: self.startBtnAction)
                .padding(.bottom, 5)
            MyButton(label: "Settings", action: self.settingsBtnAction)
                .padding(.bottom, 5)
            MyButton(label: "Leaderboard", action: self.leaderboardBtnAction)
                .padding(.bottom, 25)
        }
    }
    
    // Which is the smaller? Screen height or width
    // -> Need for the ipad to change orientation
...
