...
                    .cornerRadius(8)
                    .padding(.bottom, 20)
                MyButton(label: "Upload", action: self.uploadBtnAction)
                Spacer()
                Spacer()
                MyButton(
                    label: "Cancel",
                    action: self.cancelBtnAction,
                    width: (getMinSize()-50)/1.5
                ).padding(.bottom, 25)
            }
            Spacer()
        }
...
